<resources>
    <string name="app_name">Spellee</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ABRSM</string>
    <string name="nav_header_subtitle">Sharon sprint for MIT</string>
    <string name="nav_header_sign_out">Sign out</string>
    <string name="nav_header_desc">Practice</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="login_button_sign_in_up">Sign in or register</string>
    <string name="login_button_sign_in">Sign in</string>
    <string name="login_button_sign_up">Sign up</string>
    <string name="login_button_reset_password">Reset password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Welcome to Nerd Land</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Your password on Spellee</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="dashboard_fragment">Hello dashboard fragment</string>
    <string name="scores_fragment">Hello scores fragment</string>
    <string name="tests_fragment">Hello tests fragment</string>
    <string name="ranks_fragment">Hello ranks fragment</string>


    <string name="spellingbee_test_fragment">Hello spellingbee</string>
    <string name="piano_test_fragment">Hello     ABRSM</string>

    <string name="piano_abrsm_chapter1">Chapter 1</string>
    <string name="piano_abrsm_chapter2">Chapter 2</string>
    <string name="piano_abrsm_chapter3">Chapter 3</string>


    <string name="scores_detail_fragment">Hello score detail fragment</string>
    <string name="scores_chart_fragment">Hello score chart fragment</string>
    <string name="scores_history_fragment">Hello score history fragment</string>

    <!--Official word list fragments-->
    <string name="wordlist_official">Spelling Bee official word list</string>
    <string name="wordlist_test_history">History test word list</string>
    <string name="wordlist_user_type_in">User type in word list</string>


    <!--Score UI-->
    <string name="title_activity_score">Scores</string>

    <string name="splash_activity_title">Let\'s sprint and persevere</string>
    <string name="splash_activity_slogan">my lovely family</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">Spelling Today</string>



<!--    ABRSM-->
    <string name="chapter_drill_count"> %1$d</string>


    <!--test UI -->
    <string name="title_activity_test">Tests</string>

</resources>
