<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   tools:context=".word.WordListFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
            android:id="@+id/wordListOfficial"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/wordListHistoryTest"
            app:layout_constraintHorizontal_chainStyle="spread"
            android:text="@string/wordlist_official"/>
    <TextView
            android:id="@+id/wordListHistoryTest"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="@+id/wordListOfficial"
            app:layout_constraintBottom_toBottomOf="@+id/wordListOfficial"
            app:layout_constraintStart_toEndOf="@+id/wordListOfficial"
            app:layout_constraintEnd_toStartOf="@+id/wordListTypeIn"
            android:text="@string/wordlist_test_history"/>
    <TextView
            android:id="@+id/wordListTypeIn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="@+id/wordListOfficial"
            app:layout_constraintBottom_toBottomOf="@+id/wordListOfficial"
            app:layout_constraintStart_toEndOf="@+id/wordListHistoryTest"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/wordlist_user_type_in"/>

</androidx.constraintlayout.widget.ConstraintLayout>